@@ -8,7 +8,7 @@
  * See the file "COPYING" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * @(#) $Id: error.c,v 1.61 2000/12/15 13:52:29 strauss Exp $
+ * @(#) $Id: error.c,v 1.62 2000/12/21 09:19:52 strauss Exp $
  */
 
 #include <config.h>
@@ -258,7 +258,7 @@ static Error errors[] = {
       "identifier `%s' differs from `%s::%s' only in case" },
     { 6, ERR_PREVIOUS_DEFINITION, "",
       "previous definition of `%s'" },
-    { 2, ERR_INVALID_FORMAT, "", 
+    { 2, ERR_INVALID_FORMAT, "invalid-format", 
       "invalid format specification `%s'" },
     { 3, ERR_REFINEMENT_ALREADY_EXISTS, "", 
       "refinement for `%s' already exists in this compliance statement" },
@@ -388,6 +388,12 @@ static Error errors[] = {
       "note, -- terminates a comment" },
     { 6, ERR_OBSOLETE_IMPORT, "obsolete-import",
       "identifier `%s' should be imported from `%s' instead of `%s'" },
+    { 2, ERR_GROUP_OBJECT_STATUS, "group-object-status",
+      "%s group `%s' includes %s object `%s'" },
+    { 2, ERR_COMPLIANCE_GROUP_STATUS, "compliance-group-status",
+      "%s compliance statement `%s' includes %s group `%s'" },
+    { 2, ERR_COMPLIANCE_OBJECT_STATUS, "compliance-object-status",
+      "%s compliance statement `%s' includes %s object `%s'" },
     { 0, 0, NULL, NULL }
 };
 
